syntax = "proto3";

package othersbought;
option go_package = "pb/othersbought";

import "catalog.proto";

//
//
//
// Requests & Responses
//

// get one by sku
message GetOthersBoughtBySkuRequest {
  string sku = 1;
}

message GetOthersBoughtBySkuResponse {
  repeated catalog.Variant variants = 1;
  int64 statusCode = 2;
  string statusMessage = 3;
}

// service client
service OthersBoughtClient {
  rpc GetOthersBoughtBySku(GetOthersBoughtBySkuRequest) returns (GetOthersBoughtBySkuResponse);
}