syntax = "proto3";

package similarproducts;
option go_package = "pb/similarproducts";

import "catalog.proto";

//
//
//
// Requests & Responses
//

// get one by sku
message GetSimilarProductsBySkuRequest {
  int64 storeId = 1;
  string sku = 2;
}

message GetSimilarProductsBySkuResponse {
  repeated catalog.Variant variants = 1;
  int64 statusCode = 2;
  string statusMessage = 3;
}

// service client
service SimilarProductsClient {
  rpc GetSimilarProductsBySku(GetSimilarProductsBySkuRequest)
      returns (GetSimilarProductsBySkuResponse);
}